--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,10 @@
         margin-bottom: 20px;
         font-family: 'Zen Kaku Gothic New', sans-serif;
     }
+        .a {
+        color: #5465f1;
+        font-family: 'Zen Kaku Gothic New', sans-serif;
+    }
    .grow {
         border-radius: 10px;
         padding-top: 20px;
